Fix misaligned open source text in Safari

--- a/open-source/css/open-source.css
+++ b/open-source/css/open-source.css
@@ -38,9 +38,16 @@ body {
 }
 .banner-title {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+.banner-title > span {
+    position: relative;
+    top: 48%;
+    transform: translateY(-48%);
     font-size: x-large;
 }
 .banner-faudroids {
